# yaqd-vici

./: .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: run-entry-points.yml
yaqd_vici/: __init__.py  _vici_two_position.py  vici-two-position.avpr  vici-two-position.toml
